--- a/juego2.html
+++ b/juego2.html
@@ -8,7 +8,7 @@
   <title>Juego2</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-  <link rel="stylesheet" href="juego2.css">
+  <link rel="stylesheet" href="/styles/juego2.css">
 </head>
 
 <body>
@@ -16,21 +16,21 @@
   <body class="animator">
     <nav>
       <ul class="nav justify-content-end">
-          <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link" href="./ppt.html">Piedra Papel o tijera</a>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link" href="./juego3.html">La Pelotita</a>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link" href="#">Cuestionario</a>
-          </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./ppt.html">Piedra Papel o tijera</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./juego3.html">La Pelotita</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Cuestionario</a>
+        </li>
       </ul>
     </nav>
-    
+
     <header>
       <h1>Pregunta y Respuestas</h1>
       <p>Trivia de Programación
@@ -105,33 +105,34 @@
     <br><br><br> <br>
     <footer>
       <div class="foot-cont">
-          <section class="part1">
-              <article class="art1">
-              <ul>
-                  <li><b> Redes Sociales</b></li>
-                  <li><a href="https://www.instagram.com/" target="_blank">Instagram</a></li>
-                  <li><a href="https://www.facebook.com/" target="_blank">Facebook</a></li>
-              </ul>
-              </article>
-              <article class="art2">
-              <ul>
-                  <li><b><img src="./img/joystick2.gif" alt="" width="70px" height="70px"></b></li>
-                  <li>Diego y Pamela</li>
-              </ul>
-              </article>
-              <article class="art3">
-              <ul>
-                  <li><a href="#">Inicio</a></li>                    
-                  <li><a href="./contacto.html">Contacto</a> </li>
-                  <li><a href="https://www.juegos.com/" target="_blank">Otros Juegos</a> </li>
-              </ul>
-              </article>
-          </section>
+        <section class="part1">
+          <article class="art1">
+            <ul>
+              <li><b> Redes Sociales</b></li>
+              <li><a href="https://www.instagram.com/" target="_blank">Instagram</a></li>
+              <li><a href="https://www.facebook.com/" target="_blank">Facebook</a></li>
+            </ul>
+          </article>
+          <article class="art2">
+            <ul>
+              <li><b><img src="./img/joystick2.gif" alt="" width="70px" height="70px"></b></li>
+              <li>Diego y Pamela</li>
+            </ul>
+          </article>
+          <article class="art3">
+            <ul>
+              <li><a href="#">Inicio</a></li>
+              <li><a href="./contacto.html">Contacto</a> </li>
+              <li><a href="https://www.juegos.com/" target="_blank">Otros Juegos</a> </li>
+            </ul>
+          </article>
+        </section>
       </div>
-  </footer>
+    </footer>
     <p class="copy">Copyright 2022</p>
 
-    <script src="juego2.js"></script>
+    <script src="/js/juego2.js"></script>
+    <script src="/js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
       integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk"
       crossorigin="anonymous"></script>
