--- a/juego3.html
+++ b/juego3.html
@@ -8,7 +8,7 @@
   <title>Juego3</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-  <link rel="stylesheet" href="juego3.css">
+  <link rel="stylesheet" href="/styles/juego3.css">
 </head>
 
 <body class="animator">
@@ -75,8 +75,8 @@
 
 
 
-  <script src="juego3.js"></script>
-  <script src="./script.js"></script>
+  <script src="/js/juego3.js"></script>
+  <script src="./js/script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
     integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk"
     crossorigin="anonymous"></script>
