--- a/ppt.html
+++ b/ppt.html
@@ -1,86 +1,94 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-    <title>Priedra, papel y tijera</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  <link rel="stylesheet" href="/styles/style.css">
+  <title>Priedra, papel y tijera</title>
 </head>
+
 <body class="animator">
-    <nav class="">
-        <ul class="nav justify-content-end">
-            <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Piedra Papel o tijera</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="./juego3.html">La Pelotita</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="./juego2.html">Cuestionario</a>
-            </li>
-        </ul>
-    </nav>
-    <div class="inicio">
-        <div class="container">
-            <div id="result">
-                <img id="machine-img" src="img/rock.png" alt="">
-                <div id="start-text">
-                    Escoja una opcion para comenzar
-                </div>  
-                <img id="user-img" src="img/rock.png" alt="">
-            </div>            
-            <div id="group-btn">
-                <button id="rock" type="button">
-                    <img src="img/rock.png" alt="">
-                </button>
-                <button id="paper" type="button">
-                    <img src="img/paper.png" alt="">
-                </button>
-                <button id="scissors" type="button">
-                    <img src="img/scissors.png" alt="">
-                </button>
-            </div>
-        </div>   
-        
-    </div>
-    <br><br><br><br>
-    <footer>
-        <div class="foot-cont">
-            <section class="part1">
-                <article class="art1">
-                <ul>
-                    <li><b> Redes Sociales</b></li>
-                    <li><a href="https://www.instagram.com/" target="_blank">Instagram</a></li>
-                    <li><a href="https://www.facebook.com/" target="_blank">Facebook</a></li>
-                </ul>
-                </article>
-                <article class="art2">
-                <ul>
-                    <li><b><img src="./img/joystick2.gif" alt="" width="70px" height="70px"></b></li>
-                    <li>New York City</li>
-                </ul>
-                </article>
-                <article class="art3">
-                <ul>
-                    <li><a href="#">Inicio</a></li>
-                    <li><a href="#">Play Room</a> </li>
-                    <li><a href="#">Contacto</a> </li>
-                </ul>
-                </article>
-            </section>
+  <nav class="">
+    <ul class="nav justify-content-end">
+      <li class="nav-item">
+        <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Piedra Papel o tijera</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="./juego3.html">La Pelotita</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="./juego2.html">Cuestionario</a>
+      </li>
+    </ul>
+  </nav>
+  <div class="inicio">
+    <div class="container">
+      <div id="result">
+        <img id="machine-img" src="img/rock.png" alt="">
+        <div id="start-text">
+          Escoja una opcion para comenzar
         </div>
-    </footer>
-    <p class="copy">Copyright 2022</p>
+        <img id="user-img" src="img/rock.png" alt="">
+      </div>
+      <div id="group-btn">
+        <button id="rock" type="button">
+          <img src="img/rock.png" alt="">
+        </button>
+        <button id="paper" type="button">
+          <img src="img/paper.png" alt="">
+        </button>
+        <button id="scissors" type="button">
+          <img src="img/scissors.png" alt="">
+        </button>
+      </div>
+    </div>
+
+  </div>
+  <br><br><br><br>
+  <footer>
+    <div class="foot-cont">
+      <section class="part1">
+        <article class="art1">
+          <ul>
+            <li><b> Redes Sociales</b></li>
+            <li><a href="https://www.instagram.com/" target="_blank">Instagram</a></li>
+            <li><a href="https://www.facebook.com/" target="_blank">Facebook</a></li>
+          </ul>
+        </article>
+        <article class="art2">
+          <ul>
+            <li><b><img src="./img/joystick2.gif" alt="" width="70px" height="70px"></b></li>
+            <li>New York City</li>
+          </ul>
+        </article>
+        <article class="art3">
+          <ul>
+            <li><a href="#">Inicio</a></li>
+            <li><a href="#">Play Room</a> </li>
+            <li><a href="#">Contacto</a> </li>
+          </ul>
+        </article>
+      </section>
+    </div>
+  </footer>
+  <p class="copy">Copyright 2022</p>
 
 
 
-    <script src="script.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous"></script>
+  <script src="./js/script.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
+    integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js"
+    integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
